--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Che Papusa Dúo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     
+
 </head>
 <body>
 
-    <header>
+    <div class="cabezera">
         <a href="">Inicio</a>
         <a href="">Agenda</a>
         <a href="">Nuestro recorrido</a>
         <a href="">Contacto</a>
-    </header>
+    </div>
+
     
 </body>
 </html>
