agregado estilo section agenda

--- a/index.html
+++ b/index.html
@@ -1,27 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Che Papusa Dúo</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="style.css">
-    
-
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="cabezera">
-        <a href="">Inicio</a>
-        <a href="">Agenda</a>
-        <a href="">Nuestro recorrido</a>
-        <a href="">Contacto</a>
+      <a href="">Inicio</a>
+      <a href="">Agenda</a>
+      <a href="">Nuestro recorrido</a>
+      <a href="">Contacto</a>
     </div>
+    <section class="Agenda">
+      <h1>PROXIMOS SHOWS:</h1>
+      <p>Diciembre</p>
+      <ul>
+        <li>2/12 Maldonado</li>
+        <li>8/12 Agadu + Sauce</li>
+        <li>9/12 Florida</li>
+        <li>10/12 El Milongon</li>
+        <li>16/12 Tarariras</li>
+        <li>17/12 Joven tango</li>
+        <li>30/12 Sodre, Sala Adela Reta</li>
+      </ul>
+    </section>
 
-    
-</body>
+    <section class="Nuestro-recorrido">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+        eaque omnis architecto veritatis nam consequatur quidem error at!
+        Laboriosam, eos nam? Dicta, nostrum iure temporibus quisquam dolorum
+        reiciendis porro culpa. A sit saepe possimus culpa praesentium repellat
+        iusto consequuntur odio similique nam labore provident explicabo
+        cupiditate, assumenda soluta laudantium fugit ad consequatur vitae
+        dignissimos exercitationem enim iure magni. Quidem, voluptates. Animi
+        nemo tempore corporis ab deserunt harum soluta, minus, porro
+        perspiciatis eum aperiam asperiores delectus consectetur consequatur
+        suscipit doloremque. Quo ab, ducimus fugiat tempora consequuntur nihil
+        at a commodi dolorem? In commodi eveniet quod iure modi suscipit animi
+        repellat aliquam facilis deserunt. Dolorum nulla repellendus optio
+        cupiditate, ducimus provident accusantium sint quae ipsum dolore? Eius
+        autem quam facilis consectetur magnam. Dolorum numquam ullam corporis
+        eum architecto tempora officia dolor totam aut temporibus, obcaecati nam
+        voluptatum alias saepe voluptas atque ratione enim libero natus! Quae
+        quisquam nulla eum eaque fuga atque. Harum aliquid aspernatur amet,
+        facilis ipsam id non numquam vel assumenda soluta quia iure, veniam
+        omnis pariatur reprehenderit minus sit hic voluptatibus tenetur aperiam
+        quo sint? Omnis, voluptates ut. Doloremque? Libero quia error nulla
+        impedit tempora architecto asperiores deleniti accusantium, similique
+        rem officiis reiciendis ipsa illum cum, dolore atque recusandae?
+        Pariatur assumenda quisquam illo eligendi aperiam unde, voluptatem
+        dolorum velit? Reiciendis laboriosam quae pariatur ipsa facilis quo
+        impedit ad ullam dolorum aliquid repellendus rem fuga, a voluptatibus,
+        error voluptate suscipit adipisci delectus est sunt iusto reprehenderit?
+        Sit nam ea nesciunt. Distinctio iure excepturi sequi quis possimus odio
+        veniam facere, non, ipsam sed dolor obcaecati aperiam explicabo enim
+        fugit earum sapiente iusto eius. Voluptates non voluptas a, error
+        eligendi est tempora. Ducimus, neque! Et ratione molestiae deserunt non
+        deleniti fugiat ipsa cumque id vel aliquam, maxime quibusdam dolores
+        suscipit aperiam nesciunt labore dolorum obcaecati! Amet animi facilis
+        suscipit alias consequuntur voluptas. Debitis voluptatem aut
+        necessitatibus modi illo, quae soluta! Nulla perferendis impedit
+        sapiente. Voluptatibus, magni deleniti architecto laboriosam repellendus
+        hic harum quam, commodi laborum quis voluptatum? Similique obcaecati
+        necessitatibus error dolores. Vero harum libero fugiat eveniet
+        voluptatum assumenda laborum provident quidem quia ratione similique,
+        perspiciatis impedit nihil iste expedita optio recusandae praesentium
+        unde numquam, earum illum repellat. Iusto iste impedit saepe? Iure
+        doloribus, architecto molestias sed suscipit nam minus officiis
+        accusamus temporibus eum officia quod labore, laborum est quam illo
+        magni tempore corporis! Optio pariatur enim maiores sed eligendi beatae
+        magni? Assumenda, consequuntur inventore. Ab excepturi officia facere
+        facilis voluptatem, magni assumenda deleniti ipsa aliquid quisquam
+        dignissimos totam tempora quia ut quidem sint sequi aut quaerat corrupti
+        praesentium vel quasi iste. Quis nemo illum in, sunt debitis, aspernatur
+        perspiciatis consequuntur distinctio tenetur quasi molestiae, voluptas
+        repellendus praesentium. Minus, cumque quos at assumenda, consectetur
+        voluptates iste, odit cum dolor atque velit vel! Nostrum, aspernatur?
+        Aliquam inventore nostrum quia. Sit, nisi ratione. Est exercitationem,
+        quis eum excepturi molestias temporibus ratione, laborum obcaecati quam,
+        natus quaerat. Ratione dolor odit cupiditate. Possimus deserunt
+        voluptatum ad. Officiis vel suscipit iste doloribus. Ea quod
+        consequuntur repudiandae deserunt eos ad soluta fuga cupiditate, est
+        aperiam iusto, dolore porro inventore aspernatur accusamus voluptatibus
+        maiores? Repellat magni incidunt et deserunt. At sunt placeat
+        necessitatibus debitis fuga ipsam rerum aperiam temporibus a illum,
+        commodi accusantium impedit in provident deserunt sint voluptates labore
+        eum maiores molestias? Voluptatem accusantium velit autem quod quo. Nisi
+        ab asperiores eos quibusdam recusandae suscipit repudiandae? Impedit
+        sint excepturi optio quam modi! Placeat similique amet fuga fugit, atque
+        sequi rerum, ut repudiandae quisquam eum laudantium sit perferendis
+        inventore! Et deserunt eos est, nesciunt odio illum nihil! Culpa,
+        aspernatur saepe ipsum eum corrupti distinctio odit sit esse, deleniti
+        dolor temporibus et fuga, natus aliquam vitae. Eum quasi cum ab. Odit,
+        et consequatur? Eos at exercitationem voluptatem hic veniam harum,
+        voluptates placeat expedita autem suscipit ad earum aliquam architecto
+        natus asperiores, sit delectus accusantium quibusdam fuga animi impedit,
+        amet deserunt? Voluptate commodi cumque unde! Esse labore dolor
+        voluptate repellat nobis eligendi nemo autem voluptatibus porro, nostrum
+        consequuntur magni dolore eaque excepturi asperiores. Omnis, eveniet.
+        Eum provident voluptatum voluptatem laudantium vitae! Inventore
+        consectetur aliquid illum numquam ratione, quam officia optio
+        cupiditate, cumque nobis sunt esse voluptate tempora voluptas. Maiores
+        sapiente nostrum dolor recusandae quos debitis repudiandae. Quia ducimus
+        esse eveniet quibusdam. Quidem expedita ducimus mollitia quos dolores
+        molestias fuga eveniet dolorem libero itaque, velit pariatur impedit,
+        quaerat dolore consectetur at quis culpa aut distinctio ad nihil! A
+        deleniti iste obcaecati esse. Doloremque accusamus beatae officia minus
+        magni natus, quidem cupiditate nulla dicta harum, expedita aut. Nulla
+        eligendi consequatur suscipit doloribus ipsa ipsum voluptates, mollitia
+        impedit quos quibusdam velit possimus tenetur corporis.
+      </p>
+    </section>
+  </body>
 </html>
