agregado de fondo image

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="cabezera">
+    <div class="cabezera" id="inicio">
       <a href="">Inicio</a>
       <a href="">Agenda</a>
-      <a href="">Nuestro recorrido</a>
+      <a href="#recorrido">Nuestro recorrido</a>
       <a href="">Contacto</a>
+      
     </div>
     <section class="Agenda">
       <h1>PROXIMOS SHOWS:</h1>
@@ -33,10 +34,11 @@
         <li>17/12 Joven tango</li>
         <li>30/12 Sodre, Sala Adela Reta</li>
       </ul>
+      
     </section>
 
     <section class="Nuestro-recorrido">
-      <p>
+      <!-- <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
         eaque omnis architecto veritatis nam consequatur quidem error at!
         Laboriosam, eos nam? Dicta, nostrum iure temporibus quisquam dolorum
@@ -120,7 +122,12 @@
         magni natus, quidem cupiditate nulla dicta harum, expedita aut. Nulla
         eligendi consequatur suscipit doloribus ipsa ipsum voluptates, mollitia
         impedit quos quibusdam velit possimus tenetur corporis.
-      </p>
+      </p> -->
     </section>
+
+    <footer>
+      <a href="#inicio">Volver al inicio</a>
+      <a href="">Contacto</a>
+    </footer>
   </body>
 </html>
