--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   </head>
   <body>
     <div class="cabezera" id="inicio">
-      <a href="">Inicio</a>
+      <a href="#recorrido">Inicio</a>
       <a href="">Agenda</a>
       <a href="#recorrido">Nuestro recorrido</a>
       <a href="">Contacto</a>
-      
     </div>
     <section class="Agenda">
       <h1>PROXIMOS SHOWS:</h1>
@@ -34,10 +33,13 @@
         <li>17/12 Joven tango</li>
         <li>30/12 Sodre, Sala Adela Reta</li>
       </ul>
-      
     </section>
 
-    <section class="Nuestro-recorrido">
+    <section id="recorrido" class="Nuestro-recorrido">
+      <p style="color: white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+        adipisci.
+      </p>
       <!-- <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
         eaque omnis architecto veritatis nam consequatur quidem error at!
@@ -123,6 +125,7 @@
         eligendi consequatur suscipit doloribus ipsa ipsum voluptates, mollitia
         impedit quos quibusdam velit possimus tenetur corporis.
       </p> -->
+      <div class="overlay"></div>
     </section>
 
     <footer>
