--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
         adipisci.
       </p>
+
+      <p style="color: white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+        adipisci.
+      </p>
       <!-- <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
         eaque omnis architecto veritatis nam consequatur quidem error at!
